--- a/lesson 1.html
+++ b/lesson 1.html
@@ -10,6 +10,15 @@
 
 </head>
 
+<!-- 
+
+get
+1> <a herf="url" \\ <link>dsad</link>
+post
+form inputs action
+
+-->
+
 <!-- css -->
 1> out link ( .css link )
 2> inner style <style></style>
@@ -22,12 +31,54 @@
 </style>
 body .* <h1>(.*)</h1>
 
+
 <body bgcolor="#009966">
     <header>
         <h1 align="center">starting in HTML</h1>
         <h5>for full stack web programing</h5>
     </header>
+
+    <a href="index2.html">page</a>
+
     <img src="vue.jpg" width="50%" height="100px">
+    <div class="row">
+        <video width="50%" height="300" controls autoplay loop muted>
+            <source src="00001 stelle mich vor auf deutsch.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+        </video>
+    </div>
+    <form action="index.html" method="post">
+        <input type="color">
+        <input type="date">
+        <input type="datetime local">
+        <input type="email">
+        <input type="number">
+        <input type="range">
+        <input name="country" list="country_name">
+        <datalist list="country_name">
+            <option value="Albania">
+            <option value="Algeria">
+            <option value="Austria">
+        </datalist>
+        <select name="country">
+            <option value="Albania">
+            <option value="Algeria">
+            <option value="Austria">
+        </select>
+        <input type="text" placeholder="Please enter your name">
+        <!-- button -->
+        <input type="submit" value="done">
+        <button>done</button>
+    </form>
+
+
+    <form action="index.html">
+
+        <!-- button -->
+        <input type="submit" value="done">
+        <button>done</button>
+    </form>
+
     </img>
 
     <script></script>
