--- a/index3.html
+++ b/index3.html
@@ -5,9 +5,6 @@
         lesson 1 CSS
     </title>
     
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Kalnia+Glaze:wght@100..700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <style>
 
@@ -42,12 +39,27 @@
         <h1 id="h1fornumber2">
             strong of coding
         </h1>
-        <p>
+        <p class="P_newdiv">
             jkljalkjfhasdjkhfkjhasdjkfkljadsklj
             ajkshfdljhaldksfhkjhsdjkahflhdajkfhkj
             jhkasdflkjhjkdasfhjkdsafhjklhkfjdshkjl
+
+            wqeqweqweqwewqewqe
+            qweqwewqewqewqewqeqwewq
         </p>
     </div>
+    <form action="">
+        <input type="text" name="1">
+        <input type="hidden" value="5" name="2">
+        <input type="submit">
+    </form>
+    <img src="vue.jpg" class="opstic">
+
+    <div class="boxing">
+
+    </div>
+
+
 
 </body>
 
